--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,12 @@
 <header>
-    <i class="fas fa-bars toggle-mobile-menu-button" id="toggle_mobile_menu_button"></i>
+    <i class="fas fa-bars toggle-mobile-menu-button" id="mobile_menu_toggle_btn"></i>
     <nav class="main-nav" id="main_nav">
-        <h1 class="logo">GirlTalk</h1>
+        <a href="#top">
+            <h1 class="logo">GirlTalk</h1>
+        </a>
         <ul>
             <li>
-                <a href="#home">Hjem</a>
+                <a href="#home" class="active">Hjem</a>
             </li>
             <li>
                 <a href="#interview">Interview</a>
@@ -18,3 +20,209 @@
         </ul>
     </nav>
 </header>
+
+<style>
+
+    header i.fa-bars,
+    header i.fa-times
+    {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        font-size: 20px;
+        color: #fc4d5c;
+        cursor: pointer;
+    }
+
+    header i.fa-times
+    {
+        font-size: 20px;
+    }
+
+    header i.fa-bars,
+    header i.fa-times,
+    header i.fa-bars.active,
+    header i.fa-times.active
+    {
+        transition: right .4s ease-in, color .4s ease-in; /* Added color transition */
+    }
+
+    header i.fa-bars.active,
+    header i.fa-times.active
+    {
+        right: 225px;
+    }
+
+    nav.main-nav
+    {
+        position: fixed;
+        top: 0;
+        right: -200px;
+        height: 100vh;
+        box-shadow: var(--box-shadow);
+        border-left: 3px solid #fc4d5c;
+        width: 200px;
+        background-color: #fff5eb;
+        z-index: 2000;
+        transition: right .4s ease-in;
+    }
+
+    nav.main-nav.active
+    {
+        right: 0;
+        transition: right .4s ease-in;
+    }
+    
+    nav.main-nav h1.logo
+    {
+        position: absolute;
+        left: 50%;
+        bottom: 20px;
+        transform: translate(-50%, -50%);
+        font-size: 25px;
+    }
+
+    nav.main-nav ul
+    {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        white-space: nowrap;
+    }
+
+    nav.main-nav ul li a
+    {
+        display: inline-block;
+        font-family: 'Archivo', sans-serif;
+        font-size: 20px;
+        margin-bottom: 20px;
+        color: #fc4d5c;
+        text-transform: uppercase;
+        font-weight: 600;
+        transition: color .15s ease-in;
+    }
+
+    nav.main-nav ul li a:hover,
+    nav.main-nav ul li a.active
+    {
+        color: #d1ecef;
+        transition: color .15s ease-in;
+    }
+
+    @media screen and (min-width: 768px)
+    {
+
+     
+        header i
+        {
+            display: none;
+        }
+
+        nav.main-nav
+        {
+            position: relative;
+            left: 0;
+            height: 70px;
+            width: 100vw;
+            border-left: none;
+            border-bottom: 3px solid #fc4d5c;
+        }
+        nav.main-nav
+        {
+            position: relative; /* Ensure proper positioning context */
+        }
+        nav.main-nav h1.logo
+        {
+            position: absolute;
+            left: 20px; /* Adjust the left position according to your preference */
+            top: 35%;
+            transform: translateY(-50%);
+            font-size: 25px;
+        }
+
+        nav.main-nav ul
+        {
+            position: absolute;
+            top: 40%;
+            right: 500px;
+            transform: translateX(100%);
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav.main-nav ul li
+        {
+            display: inline-block;
+            margin-left: 20px; /* Adjust the space between menu items */
+        }
+
+        nav.main-nav ul li:first-child
+        {
+            margin-left: 0; /* Remove margin for the first item */
+        }
+    }
+</style>
+
+<script>
+    const mainNav = document.getElementById('main_nav')
+    const menuLinks = document.querySelectorAll('a')
+    const mobileMenuToggleButton = document.getElementById('mobile_menu_toggle_btn')
+
+    mobileMenuToggleButton.addEventListener('click', toggleMobileMenu)
+    menuLinks.forEach((menuLink) => menuLink.addEventListener('click', closeMobileMenuOnLinkClick))
+    menuLinks.forEach((menuLink) => menuLink.addEventListener('click', (e) => updateActiveLink(e)))
+
+    function toggleMobileMenu()
+    {
+        mainNav.classList.toggle('active')
+        mobileMenuToggleButton.classList.toggle('active')
+
+        updateMobileMenuIcon()
+    }
+
+    // Update Mobile Menu Icon
+    function updateMobileMenuIcon()
+    {
+        if(mobileMenuToggleButton.classList.contains('active'))
+        {
+            mobileMenuToggleButton.classList.remove('fa-bars')
+            mobileMenuToggleButton.classList.add('fa-times')
+        }
+        else
+        {
+            mobileMenuToggleButton.classList.add('fa-bars')
+            mobileMenuToggleButton.classList.remove('fa-times')
+        }
+    }
+
+    // Close Menu On Link Click
+    function closeMobileMenuOnLinkClick()
+    {
+        if(window.innerWidth < 768)
+        {
+            closeMobileMenu()
+        }
+      
+    }
+
+    // Helping function to the closeMobileMenuOnLinkClick function
+    function closeMobileMenu()
+    {
+        mainNav.classList.remove('active')
+        mobileMenuToggleButton.classList.remove('active')
+
+        updateMobileMenuIcon()
+    }
+
+    // Update active link
+    function updateActiveLink(e: any)
+    {
+        menuLinks.forEach((menuLink) => {
+            menuLink.classList.remove('active')
+        })
+
+        e.target.classList.add('active')
+    }
+</script>
