--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../../public/css/style.css";
 import Navigation from '../components/Navigation.astro';
+import Overlay from '../components/Overlay.astro';
 const {title} = Astro.props;
 ---
 
@@ -13,6 +14,7 @@ const {title} = Astro.props;
     <script src="https://kit.fontawesome.com/e05f21b32e.js" crossorigin="anonymous"></script>
     <title>{title}</title>
 </head>
+    <Overlay/>
     <Navigation/>
 </body>
 </html>
