Hero imported into Layout

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,10 @@
 ---
 import Section from './Section.astro';
+import Overlay from './Overlay.astro';
 ---
 
+
 <Section className="hero" id="hero">
-    <img src="" alt="">
+    <Overlay/>
+    <img src="../../public/images/hero/hero_placeholder_bg_image.webp" alt="">
 </Section>
