--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import "../../public/css/style.css";
 import Navigation from '../components/Navigation.astro';
-import Overlay from '../components/Overlay.astro';
+import Hero from '../components/Hero.astro';
+
 const {title} = Astro.props;
 ---
 
@@ -14,6 +15,7 @@ const {title} = Astro.props;
     <script src="https://kit.fontawesome.com/e05f21b32e.js" crossorigin="anonymous"></script>
     <title>{title}</title>
 </head>
+    <Hero/>
     <Navigation/>
 </body>
 </html>
