--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,5 +1,14 @@
 ---
 const {className, id} = Astro.props
+console.log(className, id)
 ---
 
 <section class={className} id={id}></section>
+
+<style>
+    section {
+        height: 100vh;
+        width: 100vw;
+        border: 2px solid #333;
+    }
+</style>
