--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,3 +8,12 @@ import Overlay from './Overlay.astro';
     <Overlay/>
     <img src="../../public/images/hero/hero_placeholder_bg_image.webp" alt="">
 </Section>
+
+<style>
+    .hero
+    {
+        border: 4px solid #333;
+        height: 100vh;
+        width: 100vw;
+    }
+</style>
