--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -3,7 +3,9 @@ const {className, id} = Astro.props
 console.log(className, id)
 ---
 
-<section class={className} id={id}></section>
+<section class={className} id={id}>
+    <slot/>
+</section>
 
 <style>
     section {
