--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,8 +1,7 @@
 ---
-import Section from './Section.astro';
-import Overlay from './Overlay.astro';
+import Section from './Section.astro'
+import Overlay from './Overlay.astro'
 ---
-
 
 <Section className="hero" id="hero">
     <Overlay/>
