--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import Overlay from './Overlay.astro'
 <style>
     img
     {
-        height: 100vh;
+        height: 100%;
         width: 100vw;
     }
 
