--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -121,7 +121,8 @@
 
         nav.main-nav
         {
-            position: relative;
+            position: sticky;
+            top: 0;
             left: 0;
             height: 70px;
             width: 100vw;
