--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -121,21 +121,19 @@
 
         nav.main-nav
         {
-            position: relative;
+            position: fixed;
+            top: 0;
             left: 0;
             height: 70px;
             width: 100vw;
             border-left: none;
             border-bottom: 3px solid #fc4d5c;
         }
-        nav.main-nav
-        {
-            position: relative; /* Ensure proper positioning context */
-        }
+     
         nav.main-nav h1.logo
         {
             position: absolute;
-            left: 20px; /* Adjust the left position according to your preference */
+            left: 20px; 
             top: 35%;
             transform: translateY(-50%);
             font-size: 25px;
