--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -8,6 +8,7 @@ const {className, id} = Astro.props
 
 <style>
     section {
+        position: relative;
         height: 100vh;
         width: 100vw;
     }
