Added padding-top to interview section

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -7,9 +7,10 @@ const {className, id} = Astro.props
 </section>
 
 <style>
-    section {
+    section:not(.hero) {
         position: relative;
         height: 100vh;
         width: 100vw;
+        padding-top: 80px;
     }
 </style>
