--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "../../public/css/style.css";
 import Navigation from '../components/Navigation.astro';
 import Hero from '../components/Hero.astro';
+import Interview from '../components/Interview.astro';
 const {title} = Astro.props;
 ---
 
@@ -16,5 +17,6 @@ const {title} = Astro.props;
 </head>
     <Navigation/>
     <Hero/>
+    <Interview/>
 </body>
 </html>
