--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import Overlay from './Overlay.astro'
     img
     {
         height: 100%;
-        width: 100vw;
+        width: 100%;
     }
 
     .container.hero-container
