--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -7,10 +7,14 @@ const {className, id} = Astro.props
 </section>
 
 <style>
-    section:not(.hero) {
+    section {
         position: relative;
         height: 100vh;
         width: 100vw;
+    }
+
+    section:not(.hero)
+    {
         padding-top: 80px;
     }
 </style>
