Put the menu toggle icon on top of everything

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -32,6 +32,7 @@
         font-size: 20px;
         color: #fc4d5c;
         cursor: pointer;
+        z-index: 6000;
     }
 
     header i.fa-times
