--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -7,8 +7,15 @@ const {className, id} = Astro.props
 </section>
 
 <style>
-    section {
+    section
+    {
+        position: relative;
         height: 100vh;
         width: 100vw;
+    }
+
+    section:not(.hero)
+    {
+        padding-top: 80px;
     }
 </style>
