Added video to the video section

--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -1,11 +1,70 @@
 ---
 import Section from "./Section.astro";
+import Overlay from "./Overlay.astro";
 ---
 
 <Section className="interview" id="interview">
-    <p>Hey</p>
+    <header>
+        <h1>LIVET SOM FRIVILLIG</h1>
+        <p>
+            Hvordan er livet som frivillig i GirlTalk?
+            Få et dybere indblik i videoen herunder og se, om det skulle være noget for dig.
+        </p>
+    </header>
+
+    <div class="container video-container">
+        <div class="container video-overlay-container">
+            <Overlay />
+            <div class="container play-button-container">
+                Hey
+            </div>
+        </div>
+       <video src="../../public/videos/placeholder_video.mp4"></video>
+    </div>
 </Section>
-<!-- 
+
 <style>
-    
-</style> -->
+    header
+    {
+       position: relative;
+       left: 50%;
+       transform: translateX(-50%);
+       text-align: center;
+    }
+
+    header h1
+    {
+        display: inline-block;
+        border-bottom: 2px solid var(--headings-text-color);
+    }
+
+    header p
+    {
+        width: 660px;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 25px;
+    }
+
+    .container.video-container
+    {
+        position: relative;
+        margin-top: 80px;
+        height: 100vh;
+    }
+
+    .container.video-container video
+    {
+        height: 100%;
+    }
+
+    .container.play-button-container
+    {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+</style>
