Video component created

--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -2,6 +2,7 @@
 import Section from "./Section.astro";
 import Overlay from "./Overlay.astro";
 import PlayButton from "./PlayButton.astro";
+import Video from "./Video.astro";
 ---
 
 <Section className="interview" id="interview">
@@ -20,7 +21,7 @@ import PlayButton from "./PlayButton.astro";
                 <PlayButton />
             </div>
         </div>
-       <video src="../../public/videos/placeholder_video.mp4" id="video" autoplay muted></video>
+        <Video src="../../public/videos/placeholder_video.mp4" id="video" />
     </div>
 </Section>
 
