--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -53,7 +53,7 @@ import Video from "./Video.astro";
     {
         position: relative;
         margin-top: 80px;
-        height: 100vh;
+        height: 400px;
     }
 
     .container.video-container video
