--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,9 @@
     --play-button-text-color: #fc4d5c;
     --slogan-text-color: #fff5eb;
     --overlay-background-color: rgb(29, 29, 27, .8);
-    --border-color: #fc4d5c; 
+    --border-color: #fc4d5c;
+    --video-controls-text-color: #fff5eb;
+    --video-audio-control-background-color: #fff5eb;
     
     /* Font Sizes */
     --primary-headings-font-size: 60px;
