--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -14,7 +14,7 @@ import PlayButton from "./PlayButton.astro";
     </header>
 
     <div class="container video-container">
-        <div class="container video-overlay-container" style="display: none;">
+        <div class="container video-overlay-container">
             <Overlay />
             <div class="container play-button-container">
                 <PlayButton />
