--- a/src/components/PlayButton.astro
+++ b/src/components/PlayButton.astro
@@ -15,10 +15,11 @@
     .container.play-button-container
     {
        position: absolute;
-       top: 50%;
+       top: 150%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-align: center;
+       z-index: 9000;
     }
 
     .play-btn
@@ -32,6 +33,7 @@
         margin-bottom: 10px;
         color: var(--play-button-text-color);
         cursor: pointer;
+        z-index: 3000;
         transition: color .2s ease-in, background-color .2s ease-in;
     }
 
