--- a/src/components/Overlay.astro
+++ b/src/components/Overlay.astro
@@ -10,5 +10,6 @@
         top: 0;
         left: 0;
         background-color: var(--overlay-background-color);
+        pointer-events: none;
     }
 </style>
