--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -17,10 +17,10 @@ import VideoControls from "./VideoControls.astro";
 
     <div class="container video-container">
         <div class="container video-overlay-container">
-            <!-- <Overlay />
+            <Overlay />
             <div class="container play-button-container">
                 <PlayButton />
-            </div> -->
+            </div>
         </div>
         <div class="wrapper video-wrapper">
             <Video src="../../public/videos/placeholder_video.mp4" id="video"/>
