--- a/src/components/VideoControls.astro
+++ b/src/components/VideoControls.astro
@@ -104,10 +104,13 @@
     video.addEventListener('mouseleave', hideVideoControlsContainer)
     video.addEventListener('click', toggleVideoPlayState)
     video.addEventListener('dblclick', toggleFullScreenMode)
-    controls.forEach((control) => control.addEventListener('mouseover', revealVideoControlsContainer))
     volumeControl.addEventListener('input', adjustVolume)
     playPauseButton.addEventListener('click', toggleVideoPlayState)
     fullScreenButton.addEventListener('click', enableFullScreenMode)
+    controls.forEach((control) => control.addEventListener('mouseover', revealVideoControlsContainer))
+    window.addEventListener('keyup', (e) => playPauseVideo(e))
+    window.addEventListener('keyup', (e) => toggleFullScreenModeWithKeyboard(e))
+
 
     window.addEventListener('load', setDefaultVolume)
 
@@ -180,6 +183,15 @@
         }
     }
 
+    /* Play Pause Video */
+    function playPauseVideo(e: any)
+    {
+        if(e.keyCode === 32)
+        {
+            toggleVideoPlayState()
+        }
+    }
+
     /* Enable Fullscreen Mode */ 
     function enableFullScreenMode()
     {
@@ -201,5 +213,15 @@
         }
 
         video.play()
+    }
+
+    /* Toggle Full Screen Mode Keyboard */
+    function toggleFullScreenModeWithKeyboard(e: any)
+    {
+        if(e.keyCode === 70)
+        {
+            toggleFullScreenMode()
+            updateVideoPlayPauseIcon()
+        }
     }
 </script>
