--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../../public/css/style.css";
 import Navigation from '../components/Navigation.astro';
 import Hero from '../components/Hero.astro';
 import Interview from '../components/Interview.astro';
+import Volunteer from '../components/Volunteer.astro';
 const {title} = Astro.props;
 ---
 
@@ -18,5 +19,6 @@ const {title} = Astro.props;
     <Navigation/>
     <Hero/>
     <Interview/>
+    <Volunteer/>
 </body>
 </html>
