--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Navigation from '../components/Navigation.astro';
 import Hero from '../components/Hero.astro';
 import Interview from '../components/Interview.astro';
 import Volunteer from '../components/Volunteer.astro';
+import ScrollToTopButton from "../components/ScrollToTopButton.astro";
 const {title} = Astro.props;
 ---
 
@@ -20,5 +21,6 @@ const {title} = Astro.props;
     <Hero/>
     <Interview/>
     <Volunteer/>
+    <ScrollToTopButton/>
 </body>
 </html>
