Offer cards done!

--- a/src/components/Volunteer.astro
+++ b/src/components/Volunteer.astro
@@ -1,12 +1,15 @@
 ---
 import Section from './Section.astro';
 import Offers from './Offers.astro';
+import OfferCard from './OfferCard.astro';
 ---
 
 <Section className="volunteer" id="volunteer">
     <div class="container volunteer-container">
         <h1>HVAD FÅR MAN SOM FRIVILLIG?</h1>
     </div>
+
+    <Offers />
 </Section>
 
 <style>
