--- a/src/components/VideoControls.astro
+++ b/src/components/VideoControls.astro
@@ -33,7 +33,7 @@
 
     .video-controls-container.revealed
     {
-        bottom: 0;
+        bottom: -20px;
         transition: bottom .2s ease-in;
     }
 
