Updated font size for heading and paragraph based on screen size

--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -48,13 +48,19 @@ import Video from "./Video.astro";
 
     @media screen and (min-width: 768px)
     {
-        
+
+        header h1
+        {
+            font-size: 60px;
+        }
+
         header p
         {
             width: 660px;
             position: relative;
             left: 50%;
             transform: translateX(-50%);
+            font-size: 35px;
         }
 
         .container.video-container
