--- a/src/components/VideoControls.astro
+++ b/src/components/VideoControls.astro
@@ -14,6 +14,7 @@
 </div>
 
 <style>
+
     .video-controls-container
     {
         font-family: 'Archivo', sans-serif;
@@ -21,7 +22,7 @@
         justify-content: space-between;
         align-items: center;
         position: absolute;
-        bottom: -55px;
+        bottom: -120%;
         width: 100%;
         background-color: rgba(0, 0, 0, .8);
         height: 55px;
@@ -29,12 +30,7 @@
         color: var(--video-controls-text-color);
         transition: bottom .2s ease-in;
         pointer-events: none;
-    }
-
-    .video-controls-container.revealed
-    {
-        bottom: 0;
-        transition: bottom .2s ease-in;
+        z-index: 5000;
     }
 
     .video-controls-container > *
@@ -98,16 +94,15 @@
     const volumeControl = document.querySelector('#volume_control') as HTMLInputElement
     const currentVolumeNumber = document.querySelector('#current_volume')
     const fullScreenButton = document.querySelector('#fullscreen_btn') as HTMLButtonElement
+    const playButton = document.querySelector('#play_btn') as HTMLButtonElement
 
-    /* EVENT LISTENERS */ 
-    video.addEventListener('mouseover', revealVideoControlsContainer)
+    /* EVENT LISTENERS */
     video.addEventListener('mouseleave', hideVideoControlsContainer)
     video.addEventListener('click', toggleVideoPlayState)
     video.addEventListener('dblclick', toggleFullScreenMode)
     volumeControl.addEventListener('input', adjustVolume)
     playPauseButton.addEventListener('click', toggleVideoPlayState)
     fullScreenButton.addEventListener('click', enableFullScreenMode)
-    controls.forEach((control) => control.addEventListener('mouseover', revealVideoControlsContainer))
     window.addEventListener('keyup', (e) => playPauseVideo(e))
     window.addEventListener('keyup', (e) => toggleFullScreenModeWithKeyboard(e))
 
@@ -121,13 +116,6 @@
         volumeControl.valueAsNumber = video.volume
         updateCurrentVolumeNumber()
     }
-
-    /* Reveal Video Controls Container */
-    function revealVideoControlsContainer()
-    {
-        videoControlsContainer.classList.add('revealed')
-    }
-    
     /* Hide Video Controls Container*/ 
     function hideVideoControlsContainer()
     {
@@ -137,7 +125,7 @@
     /* Adjust Volume */
     function adjustVolume()
     {
-        video.volume = volumeControl.value
+        video.volume = volumeControl.valueAsNumber
         updateCurrentVolumeNumber()
         
         if (volumeControl.valueAsNumber > 0)
@@ -155,7 +143,7 @@
     /* Update Current Volume Number */ 
     function updateCurrentVolumeNumber()
     {
-        currentVolumeNumber.textContent = Math.trunc(volumeControl.valueAsNumber * 100)
+        currentVolumeNumber.textContent = String(Math.trunc(volumeControl.valueAsNumber * 100))
     }
 
     /* Toggle Video Play State */
