--- a/src/components/VideoControls.astro
+++ b/src/components/VideoControls.astro
@@ -21,7 +21,7 @@
         justify-content: space-between;
         align-items: center;
         position: absolute;
-        bottom: -55px;
+        bottom: 0;
         width: 100%;
         background-color: rgba(0, 0, 0, .8);
         height: 55px;
