--- a/src/components/Volunteer.astro
+++ b/src/components/Volunteer.astro
@@ -8,16 +8,16 @@ import OfferCard from './OfferCard.astro';
     <div class="container volunteer-container">
         <h1>HVAD FÅR MAN SOM FRIVILLIG?</h1>
     </div>
-
     <Offers />
 </Section>
 
 <style>
     .volunteer-container
     {
-        margin-top: 120px;
+        display: block;
+        /* margin-top: 120px; */
         text-align: center;
-        z-index: 3000;
+        /* z-index: 3000; */
     }
 
     .volunteer-container h1
