--- a/src/components/Volunteer.astro
+++ b/src/components/Volunteer.astro
@@ -14,8 +14,8 @@ import OfferCard from './OfferCard.astro';
 <style>
     .volunteer-container
     {
-        display: block;
-        /* margin-top: 120px; */
+        padding-top: 0;
+        margin-top: -120px;
         text-align: center;
         /* z-index: 3000; */
     }
