height and width removed

--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -72,7 +72,7 @@ import Video from "./Video.astro";
 
         .container.video-container video
         {
-            height: 100%;
+            width: 100%;
         }
     }
     .wrapper.video-wrapper
