--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,8 @@
     --video-audio-control-background-color: #fff5eb;
     --scroll-to-top-text-background-color: #fc4d5c;
     --scroll-to-top-button-background-color: #fff5eb;
+    --footer-text-color: #fc4d5c;
+    --footer-background-color: #f7c7d9;
 
     /* Font Sizes */
     --primary-headings-font-size: 60px;
