--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import Hero from '../components/Hero.astro';
 import Interview from '../components/Interview.astro';
 import Volunteer from '../components/Volunteer.astro';
 import ScrollToTopButton from "../components/ScrollToTopButton.astro";
+import Footer from '../components/Footer.astro';
 const {title} = Astro.props;
 ---
 
@@ -22,5 +23,7 @@ const {title} = Astro.props;
     <Interview/>
     <Volunteer/>
     <ScrollToTopButton/>
+
+    <Footer />
 </body>
 </html>
