Fixed z-index on the button

--- a/src/components/ScrollToTopButton.astro
+++ b/src/components/ScrollToTopButton.astro
@@ -21,6 +21,7 @@
         color: var(--headings-text-color);
         background-color: #fff;
         cursor: pointer;
+        z-index: 5000;
         transition: color .2s ease-in, background .2s ease-in, right .2s ease-in;
     }
 
