--- a/src/components/Volunteer.astro
+++ b/src/components/Volunteer.astro
@@ -4,21 +4,21 @@ import Offers from './Offers.astro';
 import OfferCard from './OfferCard.astro';
 ---
 
-<Section className="volunteer" id="volunteer">
-    <div class="container volunteer-container">
+<Section className="offer" id="offer">
+    <div class="container offer-container">
         <h1>HVAD FÅR MAN SOM FRIVILLIG?</h1>
     </div>
     <Offers />
 </Section>
 
 <style>
-    .volunteer-container
+    .offer-container
     {
         padding-top: 0;
         text-align: center;
     }
 
-    .volunteer-container h1
+    .offer-container h1
     {
         display: inline-block;
         border-bottom: 2px solid var(--headings-text-color);
