--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -222,26 +222,30 @@
         e.target.classList.add('active')
     }
 
-        // Update active link on scroll
-        function updateActiveLinkOnScroll()
-    {
-        let currentSection = 'home'
-        
-        sections.forEach((section) =>
-        {
-            if(window.scrollY >= (section.offsetTop - 200))
-            {
-                currentSection = section.id
-            }
-        })
+    function updateActiveLinkOnScroll() {
+    let currentSection = '';
 
-        menuLinks.forEach((menuLink) =>
+    // Find the section that is currently scrolled to
+    sections.forEach((section) =>
+    {
+        if (window.scrollY >= (section.offsetTop - 200))
         {
-            if(menuLink.href.includes(currentSection))
-            {
-                document.querySelector('.active').classList.remove('active')
-                menuLink.classList.add('active')
-            }
-        })
-    }
+            currentSection = section.id
+        }
+    })
+
+    // Add 'active' class to the link corresponding to the current section
+    menuLinks.forEach((menuLink) =>
+    {
+        if (menuLink.getAttribute('href').slice(1) === currentSection)
+        {
+            menuLink.classList.add('active')
+        }
+        else
+        {
+            menuLink.classList.remove('active')
+        }
+    })
+}
+
 </script>
