Scroll highlight removed

--- a/src/components/Offers.astro
+++ b/src/components/Offers.astro
@@ -1,6 +1,8 @@
 ---
+import Section from './Section.astro'
 import OfferCard from './OfferCard.astro'
 ---
 
-<OfferCard/>
-
+<Section className="offers" id="offers">
+    <OfferCard/>
+</Section>
