--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const {title} = Astro.props;
     <script src="https://kit.fontawesome.com/e05f21b32e.js" crossorigin="anonymous"></script>
     <title>{title}</title>
 </head>
+<body>
     <Navigation/>
     <Hero/>
     <Interview/>
