--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,9 @@
     --video-audio-control-background-color: #fff5eb;
     --scroll-to-top-text-background-color: #fc4d5c;
     --scroll-to-top-button-background-color: #fff5eb;
+    --cta-button-text-color: #fc4d5c;
+    --cta-button-background-color: #fff5eb;
+
     --footer-text-color: #fc4d5c;
     --footer-background-color: #f7c7d9;
 
