--- a/src/components/CallToActionButton.astro
+++ b/src/components/CallToActionButton.astro
@@ -4,7 +4,7 @@ console.log(url)
 ---
 
 <button class="cta-btn" id="cta_btn">
-    <a href={`https://${url}`} target="_{target}">
+    <a href={`https://${url}`} target="{_target}">
         {callToActionButtonText}
     </a>
 </button>
