--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Hero from '../components/Hero.astro';
 import Interview from '../components/Interview.astro';
 import Volunteer from '../components/Volunteer.astro';
 import ScrollToTopButton from "../components/ScrollToTopButton.astro";
-import CallToActionButton from "../components/CallToActionButton.astro";
+import Recruit from "../components/Recruit.astro";
 import Footer from '../components/Footer.astro';
 const {title} = Astro.props;
 ---
@@ -24,6 +24,7 @@ const {title} = Astro.props;
     <Hero/>
     <Interview/>
     <Volunteer/>
+    <Recruit/>
     <ScrollToTopButton/>
     <Footer />
 </body>
