--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,7 @@ const {title} = Astro.props;
     <Hero/>
     <Interview/>
     <Volunteer/>
+    <CallToActionButton callToActionButtonText="Hey"/>
     <ScrollToTopButton/>
     <Footer />
 </body>
