--- a/src/components/CallToActionButton.astro
+++ b/src/components/CallToActionButton.astro
@@ -18,13 +18,14 @@ const {callToActionButtonText, url, target} = Astro.props
         font-family: 'Archivo', sans-serif;
         display: inline-block;
         width: fit-content;
+        margin-top: 15px;
         padding: 15px;
         font-size: 20px;
         white-space: nowrap;
         border-radius: calc(var(--base-border-radius) * 5);
-        box-shadow: var(--box-shadow);
-        border: 2px solid var(--border-color);
         background-color: var(--cta-button-background-color);
+        border: 2px solid var(--border-color);
+        box-shadow: var(--box-shadow);
         cursor: pointer;
         transition: background .2s ease-in, color .2s ease-in;
     }
@@ -48,7 +49,7 @@ const {callToActionButtonText, url, target} = Astro.props
 
     .cta-btn:active
     {
-        transform: scale(.98);
+        transform: translateX(-50%) scale(.98);
         box-shadow: none;
         transition: none;
     }
