--- a/src/components/Recruit.astro
+++ b/src/components/Recruit.astro
@@ -1,13 +1,13 @@
 ---
 import Section from './Section.astro';
+import Header from './Header.astro';
 import CallToActionButton from './CallToActionButton.astro';
 ---
 
 <Section className="volunteer" id="volunteer">
-    <header>
+    <Header class="volunteer-header" id="volunteer_header">
         <h1>Bliv en del af holdet</h1>
-    </header>
-
+    </Header>
     <p>
         Hvis ovenstående har givet dig blod på tanden til at gøre en forskel for unge piger, er det nu, du skal gribe muligheden.
         Klik på knappen nedenfor og se, hvilke muligheder du har for at gøre præcis den forskel, du ønsker.
