--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,5 +1,5 @@
 ---
-const {className, id} = Astro.props
+const {className, id, headerText} = Astro.props
 ---
 
 <section class={className} id={id}>
