--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -4,16 +4,17 @@ import Overlay from "./Overlay.astro";
 // import PlayButton from "./PlayButton.astro";
 import VideoControls from "./VideoControls.astro";
 import Video from "./Video.astro";
+import Header from "./Header.astro";
 ---
 
 <Section className="interview" id="interview">
-    <header>
+    <Header className="interview-header" id="interview_header">
         <h1>LIVET SOM FRIVILLIG</h1>
         <p>
             Hvordan er livet som frivillig i GirlTalk?
             Få et dybere indblik i videoen herunder og se, om det skulle være noget for dig.
         </p>
-    </header>
+    </Header>
 
     <div class="container video-container">
         <div class="wrapper video-wrapper">
