Changed flex-direction to column

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,7 @@ const {className, id} = Astro.props;
     header
     {
         display: flex;
+        flex-direction: column;
         justify-content: center;
     }
     
