Offers heading updated

--- a/src/components/Volunteer.astro
+++ b/src/components/Volunteer.astro
@@ -1,13 +1,15 @@
 ---
 import Section from './Section.astro';
 import Offers from './Offers.astro';
+import Header from './Header.astro'
 import OfferCard from './OfferCard.astro';
 ---
 
 <Section className="offer" id="offer">
-    <div class="container offer-container">
+    <Header>
         <h1>HVAD FÅR MAN SOM FRIVILLIG?</h1>
-    </div>
+    </Header>
+    
     <Offers />
 </Section>
 
