--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,18 +7,9 @@ const {className, id} = Astro.props;
 </header>
 
 <style>
-    header
-    {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    
-    header h1
-    {
-        text-align: center;
-        border-bottom: 2px solid var(--border-color);
-        font-size: 28px;
-        margin-bottom: 20px;
-    }
+  header
+  {
+    white-space: nowrap;
+    font-size: var(--primary-mobile-headings-font-size);
+  }
 </style>
