--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@
 
     /* Font Sizes */
     --primary-headings-font-size: 60px;
+    --primary-mobile-headings-font-size: 40px;
     --sub-headings-font-size: 25px;
     --body-text-font-size: 35px;
 
@@ -72,9 +73,17 @@ html
 /* Headings */
 h1
 {
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
     font-family: 'headingFont', sans-serif;
-    font-size: var(--primary-headings-font-size);
+    font-size: var(--primary-mobile-headings-font-size);
+    text-align: center;
+    width: fit-content;
+    border-bottom: 2px solid var(--border-color);
     color: var(--headings-text-color);
+    white-space: wrap;
 }
 
 /* Paragraphs */
@@ -82,6 +91,9 @@ p
 {
     font-family: var(--body-text);
     font-size: var(--body-text-font-size);
+    white-space: wrap;
+    text-align: center;
+    padding: 20px;
 }
 
 /* Images & Videos */
@@ -104,4 +116,12 @@ a
 {
     text-decoration: none;
     font-family: var(--body-text);
+}
+
+@media screen and (min-width: 768px)
+{
+    h1
+    {
+        font-size: var(--primary-headings-font-size);
+    }
 }
