--- a/src/components/Volunteer.astro
+++ b/src/components/Volunteer.astro
@@ -2,12 +2,13 @@
 import Section from './Section.astro';
 import Offers from './Offers.astro';
 import OfferCard from './OfferCard.astro';
+import Header from './Header.astro';
 ---
 
 <Section className="offer" id="offer">
-    <div class="container offer-container">
+    <Header className="offer-heading" id="offer_heading">
         <h1>HVAD FÅR MAN SOM FRIVILLIG?</h1>
-    </div>
+    </Header>
     <Offers />
 </Section>
 
