--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -34,11 +34,12 @@ import Overlay from './Overlay.astro'
         text-transform: uppercase;
         letter-spacing: 2px;
     }
-
+    
     .slogan
     {
         font-family: 'Archivo Narrow', sans-serif;
         font-style: italic;
         color: var(--slogan-text-color);
+        margin-top: -15px;
     }
 </style>
