All instances of "public/" removed

--- a/src/components/Interview.astro
+++ b/src/components/Interview.astro
@@ -18,7 +18,7 @@ import Header from "./Header.astro";
 
     <div class="container video-container">
         <div class="wrapper video-wrapper">
-            <Video src="../../public/videos/placeholder_video.mp4" id="video" />
+            <Video src="videos/placeholder_video.mp4" id="video" />
             <VideoControls />
         </div>
     </div>
